# ai-py-intro-course-c5

./: .cursorrules1  .gitignore  pyproject.toml
public-repo/: README.md
public-repo/案例11_批量生成证明文件/1 课程文件/: 员工花名册.xlsx  证明文件.ipynb
案例11_批量生成证明文件/1 课程文件/: 证明文件.ipynb
案例12_将Excel表格转为Word表格/1 课程文件/: 员工工资单.docx  将 Excel 转为 Word 表格.ipynb
案例12_将Excel表格转为Word表格/3 思考练习 2/: 员工工资表.xlsx
案例13_将Word文档转为PDF文件/1 课程文件/: 将Word文档转为PDF文件.ipynb
案例13_将Word文档转为PDF文件/2 思考练习 1/: 公司员工手册完整版.docx
案例14_从Word报名表中提取信息/1 课程文件/: 从Word报名表中提取信息.ipynb
案例14_从Word报名表中提取信息/1 课程文件/报名表/: 杨晨.docx  陈小雨.docx
案例14_从Word报名表中提取信息/2 思考练习 1/报名表/: 吴晓丽.docx  王小明.docx  祝谷声.docx
案例14_从Word报名表中提取信息/3 思考练习 2/: 从Word报名表中提取信息.ipynb
案例14_从Word报名表中提取信息/3 思考练习 2/报名表/: 刘强.docx  吴晓丽.docx  张青青.docx  李美丽.docx
