[tool.poetry]
name = "ai-py-intro-course-c5"
version = "0.1.0"
description = ""
authors = ["ZengYixing <id4zak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
python-docx = "^1.1.2"
docx2pdf = "^0.1.8"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
